[package]
name = "actix-test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1.0", features = ["derive"] }
[profile.release]
opt-level = "z"      # 最小サイズ最適化
lto = true           # リンク時最適化
codegen-units = 1    # 最適化の強化（ビルド時間増加）
strip = true         # シンボル削除
panic = "abort"      # パニック時の処理を最小化

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false